# rust-docker-scratch-hello-world

./: Dockerfile  README.md
.github/workflows/: deploy.yml
hello_rust_docker_scratch_world/: Cargo.toml
hello_rust_docker_scratch_world/src/: main.rs
