[package]
name = "hello_rust_docker_scratch_world"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
opt-level = 3 
debug = false
strip = "symbols"
debug-assertions = false
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
